Task5/admin-backend-api-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api-app
  labels:
    role: admin-back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      role: admin-back-end-api
  template:
    metadata:
      labels:
        role: admin-back-end-api
    spec:
      containers:
      - name: nginx
        image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-app
  labels:
    role: admin-back-end-api
spec:
  selector:
    role: admin-back-end-api
  ports:
    - protocol: TCP
      port: 80
