Task5/frontend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
  labels:
    role: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      role: front-end
  template:
    metadata:
      labels:
        role: front-end
    spec:
      containers:
      - name: nginx
        image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
  labels:
    role: front-end
spec:
  selector:
    role: front-end
  ports:
    - protocol: TCP
      port: 80
